# layout_gen

./: Cargo.toml  README.md  render_settings.json
src/: main.rs  parse.rs  render.rs  render_opts.rs
src/keylog/: csv_parser.rs  mod.rs  stats.rs
src/parse/: data.rs  input_info.rs  keymap.rs  mod.rs  render_opts.rs
src/render/: mod.rs  render_opts.rs
