[package]
name = "layout_gen"
version = "0.1.0"
edition = "2021"

[dependencies]
array2d = "0.3.2"
camino = "1.1.9"
clap = { version = "4.5.21", features = ["derive"] }
eyre = "0.6.12"
regex = "1.11.1"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
html-escape = "0.2.11"
